2007-07-31  Brian Warner  <warner@lothar.com>

	* buildbot/process/builder.py: remove unused import

2007-07-30  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (ISourceStamp): cleanup patch by Dustin
	Mitchell: pass SourceStamps around rather than branch/version/etc
	tuples. Thanks Dustin! Closes #70.
	* buildbot/sourcestamp.py (SourceStamp): insist that .changes is a
	tuple rather than a list, to avoid surprising mutations
	* buildbot/process/builder.py (BuilderControl.resubmitBuild): same
	* buildbot/status/mail.py (MailNotifier.buildMessage): same
	* buildbot/status/builder.py (BuildStatus.getSourceStamp): same
	* buildbot/test/test_status.py (Subscription): same
	* buildbot/test/test_control.py (Force): same
	* buildbot/test/test_buildreq.py (Request.testMerge): same

2007-07-29  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: remove the spurious 'builders'
	variable, since it wasn't used and is confusing in the presence of
	c['builders'] (which *is* used). Thanks to Thomas Vander Stichele
	for the suggestion.

	* buildbot/status/web/waterfall.py (WaterfallStatusResource): update
	the Buildbot home-page link to point at buildbot.net instead of 
	sourceforge, and add a current-version query parameter so we can
	get some statistics on which versions are in use out there.

2007-07-28  Brian Warner  <warner@lothar.com>

	* buildbot/master.py (BuildMaster.loadConfig): replace c['sources']
	with c['change_source'], leaving c['sources'] for backwards
	compatibility (but deprecated), scheduled for removal in 0.8.0
	* docs/buildbot.texinfo: same
	* buildbot/test/test_config.py: verify that c['sources'] still works
	* buildbot/test/test_*.py: replace c['sources'] with c['change_source']
	* buildbot/scripts/sample.cfg: update to match

	* buildbot/changes/mail.py (MaildirSource): parse with python's
	stdlib 'email' module, which has been available since python2.2,
	and drop use of the 'rfc822' module, which has been depreceated